# Math-Equation-Solver

./: .gitignore  README.md  calc.c  package-lock.json
app/: .env  image_to_latex.py  parser.py  polynomial_solver.py  server.py  server.py.orig
calc/: CMakeLists.txt  calc.c
client/: package-lock.json  package.json
client/src/: .App.js.swo  .App.js.swp  .FileList.js.swo  App.css  App.html  App.js  App.js.orig  DragAndDrop.js  FileList.js
parsing/: CMakeLists.txt  a.out  parse.cpp
server/: testServer.py
